--- a/lottery-interfaces/src/main/resources/Application.yml
+++ b/lottery-interfaces/src/main/resources/Application.yml
@@ -5,7 +5,7 @@ spring:
   datasource:
     username: root
     password: 123456
-    url: jdbc:mysql://127.0.0.1:3306/lottery?useUnicode=true
+    url: jdbc:mysql://127.0.0.1:3306/lottery?useUnicode=true&characterEncoding=UTF-8
     driver-class-name: com.mysql.jdbc.Driver
 
 mybatis:
