--- a/lottery-domain/pom.xml
+++ b/lottery-domain/pom.xml
@@ -27,6 +27,10 @@
             <artifactId>fastjson</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.zhi.lottery</groupId>
             <artifactId>lottery-common</artifactId>
             <version>1.0-SNAPSHOT</version>
