--- a/lottery-infrastructure/pom.xml
+++ b/lottery-infrastructure/pom.xml
@@ -21,6 +21,10 @@
             <version>2.1.4</version>
         </dependency>
         <dependency>
+            <groupId>cn.bugstack.middleware</groupId>
+            <artifactId>db-router-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.zhi.lottery</groupId>
             <artifactId>lottery-domain</artifactId>
             <version>1.0-SNAPSHOT</version>
