--- a/lottery-application/pom.xml
+++ b/lottery-application/pom.xml
@@ -10,5 +10,13 @@
     </parent>
 
     <artifactId>lottery-application</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>com.zhi.lottery</groupId>
+            <artifactId>lottery-domain</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 </project>
