--- a/lottery-interfaces/pom.xml
+++ b/lottery-interfaces/pom.xml
@@ -76,6 +76,12 @@
             <artifactId>lottery-domain</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.zhi.lottery</groupId>
+            <artifactId>lottery-application</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
