[REQUEST-20240126] 搭建MQ消息组件Kafka服务环境

--- a/lottery-interfaces/pom.xml
+++ b/lottery-interfaces/pom.xml
@@ -91,6 +91,11 @@
         </dependency>
         <!-- MapStruct end -->
 
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+
         <!-- 业务包 begin -->
         <dependency>
             <groupId>com.zhi.lottery</groupId>
