--- a/lottery-interfaces/pom.xml
+++ b/lottery-interfaces/pom.xml
@@ -91,6 +91,12 @@
         </dependency>
         <!-- MapStruct end -->
 
+        <!-- xxl-job-core https://github.com/xuxueli/xxl-job/-->
+        <dependency>
+            <groupId>com.xuxueli</groupId>
+            <artifactId>xxl-job-core</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
