--- a/lottery-interfaces/src/main/resources/Application.yml
+++ b/lottery-interfaces/src/main/resources/Application.yml
@@ -104,10 +104,12 @@ dubbo:
   application:
     name: Lottery
     version: 1.0.0
+    paramters:
+      unicast: false
   registry:
     address: N/A #multicast://224.5.6.7:1234
   protocol:
     name: dubbo
     port: 20880
   scan:
-    base-packages: com.zhi.lottery.rpc
+    base-packages: com.zhi.lottery.rpc.*
